# harmonic-rsi

./: .gitignore  CHANGELOG.md  DryRun-FixMojibake.ps1  LICENSE  README.md  pyproject.toml  safe_fix_mojibake.py
.github/workflows/: ci.yml
harmonic_rsi/: __init__.py  app_gradio.py  ism_field.py  rsi.py
harmonic_rsi/agents/: adaptive.py  base.py  harmonic_meta.py  providers.py  researcher.py  run_agent.py
tests/: test_imports.py  test_rsi_ism.py
